hphp/test/slow/class-ptr/as-class-or-classname.php.expectf

Fatal error: "is" and "as" operators cannot be used with a class_or_classname type in %s/class-ptr/as-class-or-classname.php on line 5
